css/stylesheet.css
:root {
    --primaryColour: #6E6362;
    --secondaryColour: #DBB42C;
    --tertiaryColour: #C9A227;
    --textColour: #000000;
}

@font-face {
    font-family: Lato-Thin;
    src: url(fonts/Lato-Thin.ttf);
}

@font-face {
	font-family: Lato-Regular;
	src: url(fonts/Lato-Regular.ttf);
}

@font-face {
	font-family: Lato-Bold;
	src: url(fonts/Lato-Bold.ttf);
}

h1, h2, h3, h4, h5, h6{
	margin: 0px;
}

html{
	background-color: #161A1D;
}

*{
	box-sizing: border-box;
	font-family: Lato-Regular;
}

hr{
	border-color: #000000;
}

ul{
	padding: 0px;
	list-style: none;
}

a{
	color: black;
	text-decoration: none;
}

footer{
	background-color: var(--secondaryColour);
	margin: 5px 10px;
	border-radius: 5px;
	padding: 8px 10px;
}

button{
	font-family: Lato-Bold;
	background-color: #000000;
	color: var(--secondaryColour);
	border-radius: 5px;
	padding: 5px 10px;
	transition-duration: 0.5s;
    transition-timing-function: ease-out;
}


button:hover{
	background-color: var(--tertiaryColour);
	color: var(--textColour);
}


#content{
	margin: 5px 10px;
	border-radius: 5px;
	padding: 40px;
	background-color: var(--tertiaryColour);
}

#experience ul{
	margin-left: 20px;
	list-style: unset;
	margin-bottom: 20px;
}

#experience h5{
	margin-top: 5px;
}

#experience h2{
	margin-top: 20px;
	margin-bottom: 10px;
}

#education p{
	margin-top: 0px;
}

#education h3{
	margin-top: 15px;
}


#navbar{
	border-radius: 5px;
	padding: 8px 10px;
	margin: 0px 10px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;
	background-color: var(--secondaryColour);
}


#navButton{
	margin-top: 10px;
	width: 100%;
	border: none;
}

#hobbies ul{
	margin: 8px 10px
}

#hobbies a{
	color: purple;
	text-decoration: underline;
}

#hobbies a:hover{
	color: pink;
}

#readingList ul{
	margin: 8px 10px
}

#readingList h3, #readingList h4{
	margin: 5px 0px 2px 0px;
}


#schoolGrades td:nth-child(2){
	text-align: center;
}


#social-media-links li:hover, #toggleMenu li:hover{
	text-decoration: underline;
}


#social-media-links a{
	text-decoration: none;
	color: black;
	padding-left: 5px;
}


#social-media-links li:first-child, #toggleMenu li:first-child {
	border-left: none;
	padding-left: 0;
}


#social-media-links li, #toggleMenu li{
	border-left: 0.2em solid;
	padding-left: 0.5em;
	padding-right: 0.5em;
	height: 1.5em;
	display: inline;
}


#social-media-links {
	width: 100%;
	margin-top: 4px;
}

#qualifications a{
	color: purple;
	text-decoration: underline;
}

#qualifications a:hover{
	color: pink;
}

#title{
	font-family: Lato-Thin;
	letter-spacing: 0.08em;
	margin-right: auto;
}


#toggleMenu{
	margin-left: auto;
	margin-top: -60px;
}


.project{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: flex-end;
	margin-bottom: 50px;
}


.project img{
	max-width:480px;
 	max-height:480px;
 	width: auto;
 	height: auto;
	margin-right: auto;
	flex-grow: 1;
	border-radius: 5px;
}


.project p{
	font-size: 1.2em;
	letter-spacing: 0.5px;
}


.project h2{
	text-align: center;
	flex-basis: 100%;
	padding-bottom: 10px;
	font-size: 30px;
}

.buttonRow{
	width: 100%;
	display: flex;
}

.buttonRow button{
	width: 100%;
}

.buttonRow a{
	flex: 1;
	margin: 10px 3px;
}


.projectDescription{
	display: inline;
	flex-grow: 2;
	flex-basis: 167px;
	margin: 0px 0px 0px 10px;
}


.project2Image{
	display: none;
}

.imageCarousel{
	position: relative;
}

.back, .forward{
	position: absolute;
	top: 50%;
	width: auto;
	cursor: pointer;
	padding: 10px;
	transition: 0.2s;
	fill-opacity: 0.2;
	background-color: rgba(201, 162, 39, 0.3);
}

.forward{
	right: 0;
}

.back:hover, .forward:hover {
	background-color: #C9A227;
}


h1{
	margin: 0;
}


@media (max-width: 576px) {
	.project img{
		max-width:none;
 		max-height:none;
	}

}


@media (max-width: 768px) {
	.project img{
		max-width: 100%;
 		max-height: 100%;
		min-width: 350px;
		min-height: 250px;
	}	

	.projectDescription{
		margin: 5px 0px;
		flex-basis: 100%;
	}

	.projectDescription h3{
		margin-top: 10px;
		text-align: center;
	}
	
	#title{
		font-size: 38px;
		width: 100%;
		text-align: center;
		margin: 0px;
	}

	#social-media-links{
		text-align: center;
		margin: 0px;
	}

	#toggleMenu{
		width: 80%;
		margin: 0px;
		padding: 0px;
		display: flex;
		flex-direction: column;
		align-items: center;
	}
	
	#toggleMenu li{
		border: none;
		padding: 6px 0px;
		margin: 2px 0px;
		width: 100%;
		text-align: center;
	}
}

